--- a/train/ds_config.json
+++ b/train/ds_config.json
@@ -1,38 +1,38 @@
 {
-    "train_micro_batch_size_per_gpu": 1,
-    "gradient_accumulation_steps": 1,
-    "optimizer": {
-        "type": "AdamW",
-        "params": {
-            "lr": 1e-5,
-            "betas": [
-                0.9,
-                0.95
-            ],
-            "eps": 1e-8,
-            "weight_decay": 1e-4
-        }
+    "train_batch_size": "auto",
+    "train_micro_batch_size_per_gpu": "auto",
+    "gradient_accumulation_steps": "auto",
+    "gradient_clipping": "auto",
+    "zero_allow_untested_optimizer": true,
+    "fp16": {
+        "enabled": "auto",
+        "loss_scale": 0,
+        "loss_scale_window": 1000,
+        "initial_scale_power": 16,
+        "hysteresis": 2,
+        "min_loss_scale": 1
+    },
+    "bf16": {
+        "enabled": "auto"
     },
     "zero_optimization": {
         "stage": 3,
-        "stage3_gather_16bit_weights_on_model_save": true,
-        "offload_param": {
-            "device": "cpu",
-            "pin_memory": true
-        },
         "offload_optimizer": {
             "device": "cpu",
             "pin_memory": true
         },
+        "offload_param": {
+            "device": "cpu",
+            "pin_memory": true
+        },
+        "overlap_comm": false,
         "contiguous_gradients": true,
-        "overlap_comm": true,
-        "reduce_bucket_size": 500000000,
-        "allgather_bucket_size": 500000000
-    },
-    "activation_checkpointing": {
-        "partition_activations": true,
-        "contiguous_memory_optimization": true,
-        "cpu_checkpointing": false
-    },
-    "zero_allow_untested_optimizer": true
+        "sub_group_size": 1e9,
+        "reduce_bucket_size": "auto",
+        "stage3_prefetch_bucket_size": "auto",
+        "stage3_param_persistence_threshold": "auto",
+        "stage3_max_live_parameters": 1e9,
+        "stage3_max_reuse_distance": 1e9,
+        "stage3_gather_16bit_weights_on_model_save": true
+    }
 }
